@@ -65,7 +65,7 @@ gsl_ieee_set_mode (int precision, int rounding, int exception_mask)
   if (exception_mask & GSL_IEEE_MASK_UNDERFLOW)
     mode &=  ~ FP_X_UFL ;
 
-  if (exception_mask & GSL_IEEE_CATCH_INEXACT)
+  if (exception_mask & GSL_IEEE_TRAP_INEXACT)
     {
       mode |= FP_X_IMP ;
     }
