@@ -55,7 +55,7 @@ gsl_ieee_set_mode (int precision, int rounding, int exception_mask)
   if (exception_mask & GSL_IEEE_MASK_UNDERFLOW)
     mode |= _FPU_MASK_UM ;
 
-  if (exception_mask & GSL_IEEE_CATCH_INEXACT)
+  if (exception_mask & GSL_IEEE_TRAP_INEXACT)
     {
       mode &= ~ _FPU_MASK_PM ;
     }
